<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="specie">Specie</string>
    <string name="favorite">Favs</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="genre">Genre</string>
    <string name="gender">Gender</string>
</resources>