<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCard"
        android:layout_width="170dp"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            />

    </com.google.android.material.card.MaterialCardView>



    <TextView
        android:id="@+id/tvStatusTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/cvCard"
        />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvStatusTag"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvSpecieTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specie"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatusTag"
        app:layout_constraintStart_toEndOf="@id/cvCard"
        />

    <TextView
        android:id="@+id/tvSpecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:layout_constraintStart_toEndOf="@id/tvSpecieTag"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvGenreTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Genre"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSpecieTag"
        app:layout_constraintStart_toEndOf="@id/cvCard"
        />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSpecie"
        app:layout_constraintStart_toEndOf="@id/tvGenreTag"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="#E91E63"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/cvCard" />

</androidx.constraintlayout.widget.ConstraintLayout>